<resources>
    <string name="app_name">Task3</string>

    <!-- Number Buttons -->
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>

    <!-- -->
    <string name="button_decimal">.</string>

    <!-- Operator Buttons -->
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="button_multiply">x</string>
    <string name="button_divide">/</string>
    <string name="button_equals">=</string>
    <string name="button_clear">C</string>
    <string name="button_back">Back</string>
    <string name="button_sign_change">+/-</string>
    <string name="button_square_root">√</string>

    <!-- Dummy Buttons -->
    <string name="button_d1">MC</string>
    <string name="button_d2">MR</string>
    <string name="button_d3">MS</string>
    <string name="button_d4">M+</string>
    <string name="button_d5">M-</string>
    <string name="button_d6">CE</string>
    <string name="button_d7">%</string>
    <string name="button_d8">1/x</string>
    <string name="button_d9">x</string>
</resources>