<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="HardcodedText"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvWorkings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/tvResults"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- first row -->
    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonOperator"
            android:text="@string/button_d1"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_d2"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_d3" />
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_d4"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_d5"/>

    </LinearLayout>
    <!-- second row -->
    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonOperator"
            android:onClick="backSpaceHandler"
            android:text="@string/button_back"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_d6"/>
        <Button
            style="@style/buttonOperator"
            android:onClick="allClearHandler"
            android:text="@string/button_clear" />
        <Button
            style="@style/buttonOperator"
            android:onClick="signChangeHandler"
            android:text="@string/button_sign_change"/>
        <Button
            style="@style/buttonOperator"
            android:onClick="squareRootHandler"
            android:text="@string/button_square_root"/>

    </LinearLayout>
    <!-- third row -->
    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/button_7"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/button_8"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/button_9" />
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_divide"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_d7"/>

    </LinearLayout>
    <!-- fourth row -->
    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/button_4"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/button_5"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/button_6" />
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_multiply"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_d8"/>

    </LinearLayout>
    <!-- fifth row -->
    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/button_1"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/button_2"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/button_3" />
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_subtract"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_d9"/>

    </LinearLayout>
    <!-- sixth row -->
    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:layout_weight="2"
            android:text="@string/button_0"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_decimal"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/button_add"/>
        <Button
            style="@style/buttonOperator"
            android:onClick="equalsHandler"
            android:text="@string/button_equals"/>

    </LinearLayout>



</LinearLayout>